# graph-partitioner

./: .gitignore  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  Cargo.toml  INTEGRATION_TEST_PLAN.md  LICENSE-MIT  README.md  RENAMES.md  release.toml
.github/workflows/: ci.yml
benches/: partition.rs
src/: balance_kway.rs  contig.rs  ctrl.rs  lib.rs  minconn.rs  option.rs  rng.rs  types.rs
src/graph/: coarsen.rs  contract.rs  mod.rs  setup.rs
src/mesh/: meshpart.rs  mod.rs
src/partition/: balance.rs  fm.rs  initpart.rs  kway.rs  kwayfm.rs  kwayrefine.rs  mod.rs  pmetis.rs  recursive.rs  refine2way.rs  split.rs
src/util/: mod.rs  pqueue.rs
tests/: comparison.rs  debug_cmetis.rs  dump_graph.rs  fixtures.rs  integration.rs
